use anonymous namespace in place of static where possible.
fix building on systems with std::unreachable() implemented. this was broken in the
previous commit due to not forcing -std=c++23 to be globally set.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -66,23 +66,10 @@ if (GBA_DEV)
     target_add_linker_flags(GBA sanitizer_flags PUBLIC)
 endif()
 
-include(CheckCXXSourceCompiles)
-
-check_cxx_source_compiles(
-    "#include <utility>
-    void a() { std::unreachable(); }
-    int main() { return 0; }"
-    HAVE_STD_UNREACHABLE
-)
-
-target_compile_definitions(GBA
-    PRIVATE
-        GBA_DEBUG=$<BOOL:${GBA_DEBUG}>
-        SINGLE_FILE=$<BOOL:${SINGLE_FILE}>
-        ENABLE_SCHEDULER=$<BOOL:${ENABLE_SCHEDULER}>
-
-    PUBLIC
-        HAVE_STD_UNREACHABLE=$<BOOL:${HAVE_STD_UNREACHABLE}>
+target_compile_definitions(GBA PRIVATE
+    GBA_DEBUG=$<BOOL:${GBA_DEBUG}>
+    SINGLE_FILE=$<BOOL:${SINGLE_FILE}>
+    ENABLE_SCHEDULER=$<BOOL:${ENABLE_SCHEDULER}>
 )
 
 set_target_properties(GBA PROPERTIES CXX_STANDARD 23)
