constify code, rename some functions, better impl exceptions
most code hasn't changed functionality (apart from sign_extend), this is
a code cleanup commit whilst i procrastinate finishing the ppu.

- arm exceptions are impl to closely mirror how the arm docs explain it.
- bit::sign_extend works from zero index now
- renamed some functions to have proper names
- improved readability in a few places where possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,22 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-find_program(CLANGD_INSTALLED clangd)
-
-if (CLANGD_INSTALLED)
-    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-    message("found clangd: generating compile_commands.json to ${CMAKE_BINARY_DIR}/compile_commands.json")
-else()
-    message("cant find clangd: not generating compile_commands.json")
-endif()
-
 project(notorious_beeg
-    VERSION 0.0.1
+    VERSION 0.0.3
     DESCRIPTION "GBA emulator written in c++23"
     HOMEPAGE_URL "https://github.com/ITotalJustice/notorious_beeg"
     LANGUAGES C CXX
 )
 
-message("SYSTEM: ${CMAKE_SYSTEM_NAME}")
-message("COMPILER: ${CMAKE_CXX_COMPILER_ID}")
+find_program(CLANGD_INSTALLED clangd)
+
+if (CLANGD_INSTALLED)
+    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+    message(STATUS "found clangd: generating compile_commands.json to ${CMAKE_BINARY_DIR}/compile_commands.json")
+else()
+    message(STATUS "cant find clangd: not generating compile_commands.json")
+endif()
+
+message(STATUS "SYSTEM: ${CMAKE_SYSTEM_NAME}")
+message(STATUS "COMPILER: ${CMAKE_CXX_COMPILER_ID}")
 
 add_subdirectory(src)
