add header parsing and checksum checking

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -124,7 +124,7 @@ function(target_apply_lto target)
     check_ipo_supported(RESULT ipo_supported OUTPUT ipo_error)
     if (ipo_supported)
         message(STATUS "IPO / LTO enabled for target: ${target}")
-        set_property(TARGET GBA PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
+        set_property(TARGET ${target} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
     else()
         message(STATUS "IPO / LTO not supported: <${ipo_error}>")
     endif()
