fix very bloated binary size due to rtc commit
caused in commit https://github.com/ITotalJustice/notorious_beeg/commit/f5e92fd29aedb812210775557ce795bd45d4bd3a
specifically https://github.com/ITotalJustice/notorious_beeg/blob/f5e92fd29aedb812210775557ce795bd45d4bd3a/src/core/gpio.hpp#L17

this is due to the gba core being static.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -20,6 +20,7 @@ else ()
         bios.cpp
         bios_hle.cpp
         scheduler.cpp
+        gpio.cpp
         rtc.cpp
 
         backup/backup.cpp
