--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -1,25 +1,18 @@
 cmake_minimum_required(VERSION 3.20.0)
 
-# fetch imgui
+project(frontend_base LANGUAGES CXX)
+
+add_library(frontend_base frontend_base.cpp)
+
+target_link_libraries(frontend_base PUBLIC GBA)
+target_include_directories(frontend_base PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+set_target_properties(frontend_base PROPERTIES CXX_STANDARD 23)
+
+target_add_common_cflags(frontend_base PRIVATE)
+target_apply_lto_in_release(frontend_base)
+
 include(FetchContent)
-
 Set(FETCHCONTENT_QUIET FALSE)
-
-FetchContent_Declare(imgui
-    GIT_REPOSITORY https://github.com/ocornut/imgui.git
-    GIT_TAG        v1.88
-    GIT_PROGRESS   TRUE
-    CONFIGURE_COMMAND ""
-    BUILD_COMMAND ""
-)
-
-FetchContent_Declare(imgui_club
-    GIT_REPOSITORY https://github.com/ocornut/imgui_club.git
-    GIT_TAG        d4cd9896e15a03e92702a578586c3f91bbde01e8
-    GIT_PROGRESS   TRUE
-    CONFIGURE_COMMAND ""
-    BUILD_COMMAND ""
-)
 
 FetchContent_Declare(minizip
     GIT_REPOSITORY https://github.com/madler/zlib.git
@@ -29,57 +22,13 @@ FetchContent_Declare(minizip
     BUILD_COMMAND ""
 )
 
-SET(COMPRESSOR_ZLIB ON)
-
-FetchContent_Declare(rewind
-    GIT_REPOSITORY https://github.com/ITotalJustice/librewind.git
-    GIT_TAG        master
-    GIT_PROGRESS   TRUE
-)
-
-FetchContent_MakeAvailable(rewind)
-FetchContent_MakeAvailable(imgui)
-FetchContent_MakeAvailable(imgui_club)
-
-add_library(imgui
-    ${imgui_SOURCE_DIR}/imgui.cpp
-    ${imgui_SOURCE_DIR}/imgui_draw.cpp
-    ${imgui_SOURCE_DIR}/imgui_tables.cpp
-    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
-    ${imgui_SOURCE_DIR}/imgui_demo.cpp
-)
-
-target_include_directories(imgui PUBLIC ${imgui_SOURCE_DIR})
-
-# memory editor
-add_library(imgui_club INTERFACE)
-target_include_directories(imgui INTERFACE ${imgui_club_SOURCE_DIR}/imgui_memory_editor)
-# fetch imgui is done!
-
-# always include backend after fetching imgui
-add_subdirectory(backend)
-
-add_executable(notorious_beeg
-    main.cpp
-    system.cpp
-    debugger/io.cpp
-)
-
-target_link_libraries(notorious_beeg PRIVATE GBA)
-target_link_libraries(notorious_beeg PRIVATE imgui imgui_club)
-target_link_libraries(notorious_beeg PRIVATE backend)
-target_link_libraries(notorious_beeg PRIVATE
-    rewind
-    compressor_zlib
-)
-
 set(FOUND_MINIZIP FALSE)
 
 if (VCPKG_TOOLCHAIN)
     set(DISABLE_INSTALL_TOOLS ON)
     find_package(minizip CONFIG)
     if (DEFINED minizip_FOUND)
-        target_link_libraries(notorious_beeg PRIVATE minizip::minizip)
+        target_link_libraries(frontend_base PRIVATE minizip::minizip)
 
         set(FOUND_MINIZIP TRUE)
         message(STATUS "using vcpkg minizip")
@@ -92,8 +41,8 @@ else()
     find_path(minizip_inc minizip)
 
     if (minizip_lib AND minizip_inc)
-        target_link_libraries(notorious_beeg PRIVATE ${minizip_lib})
-        target_include_directories(notorious_beeg PRIVATE ${minizip_inc})
+        target_link_libraries(frontend_base PRIVATE ${minizip_lib})
+        target_include_directories(frontend_base PRIVATE ${minizip_inc})
 
         set(FOUND_MINIZIP TRUE)
         message(STATUS "using system minizip")
@@ -122,26 +71,15 @@ if (NOT FOUND_MINIZIP)
 
     find_package(ZLIB REQUIRED)
     target_link_libraries(minizip PRIVATE ZLIB::ZLIB)
-    target_link_libraries(notorious_beeg PRIVATE minizip)
+    target_link_libraries(frontend_base PRIVATE minizip)
 
     message(STATUS "using github minizip")
 endif()
 
-# target_add_common_cflags(notorious_beeg PRIVATE)
-target_apply_lto_in_release(imgui)
-target_apply_lto_in_release(notorious_beeg)
+if (IMGUI)
+    add_subdirectory(imgui)
+endif()
 
-option(DUMP_AUDIO "dump audio to a file" OFF)
-option(SPEED_TEST "run uncapped fps, used for perf test" OFF)
-option(DEBUGGER "basic imgui debugger" ON)
-
-target_compile_definitions(notorious_beeg PRIVATE
-    SPEED_TEST=$<BOOL:${SPEED_TEST}>
-    DUMP_AUDIO=$<BOOL:${DUMP_AUDIO}>
-    DEBUGGER=$<BOOL:${DEBUGGER}>
-)
-
-set_target_properties(notorious_beeg PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
-    CXX_STANDARD 23
-)
+if (SDL2)
+    add_subdirectory(sdl2)
+endif()
