--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,17 @@ message(STATUS "COMPILER: ${CMAKE_CXX_COMPILER_ID}")
 option(FRONTEND "enable frontend build" ON)
 option(SDL2 "basic sdl2 frontend" OFF)
 option(IMGUI "imgui frontend" OFF)
+option(LTO "enable lto for all targets" OFF)
+
+if (LTO)
+    include(CheckIPOSupported)
+    check_ipo_supported(RESULT ipo_supported OUTPUT ipo_error)
+    if (ipo_supported)
+        message(STATUS "IPO / LTO enabled for ALL targets")
+        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+    else()
+        message(STATUS "IPO / LTO not supported")
+    endif()
+endif()
 
 add_subdirectory(src)
