--- a/src/frontend/sdl2/CMakeLists.txt
+++ b/src/frontend/sdl2/CMakeLists.txt
@@ -4,10 +4,7 @@ project(notorious_beeg_SDL2 LANGUAGES CXX)
 
 add_executable(notorious_beeg_SDL2 main.cpp)
 
-find_package(SDL2 CONFIG REQUIRED)
-
-target_link_libraries(notorious_beeg_SDL2 PRIVATE frontend_base)
-target_link_libraries(notorious_beeg_SDL2 PRIVATE SDL2::SDL2 SDL2::SDL2main)
+target_link_libraries(notorious_beeg_SDL2 PRIVATE sdl2_base)
 
 target_add_common_cflags(notorious_beeg_SDL2 PRIVATE)
 target_apply_lto_in_release(notorious_beeg_SDL2)
