--- a/src/frontend/emscripten/CMakeLists.txt
+++ b/src/frontend/emscripten/CMakeLists.txt
@@ -7,7 +7,6 @@ add_executable(notorious_beeg_EMSDK main.cpp)
 target_link_libraries(notorious_beeg_EMSDK PRIVATE sdl2_base)
 
 target_add_common_cflags(notorious_beeg_EMSDK PRIVATE)
-target_apply_lto_in_release(notorious_beeg_EMSDK)
 
 set_target_properties(notorious_beeg_EMSDK PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
@@ -25,16 +24,20 @@ option(EM_USE_THREADS
 option(EMRUN "build with emrun support, used for testing" OFF)
 
 if (EM_USE_THREADS)
-    target_link_options(notorious_beeg_EMSDK PRIVATE "-pthread")
+    # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+    # target_link_options(notorious_beeg_EMSDK PRIVATE "-pthread")
+    # target_compile_options(notorious_beeg_EMSDK PRIVATE "-pthread")
+    target_compile_definitions(notorious_beeg_EMSDK PRIVATE EM_THREADS=1)
 endif()
 
 if (EMRUN)
     target_link_options(notorious_beeg_EMSDK PRIVATE "--emrun")
+    target_compile_definitions(notorious_beeg_EMSDK PRIVATE EMRUN=1)
 endif()
 
 file(COPY "${CMAKE_SOURCE_DIR}/assets/buttons" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
 file(COPY "${CMAKE_SOURCE_DIR}/assets/menu" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/assets")
-file(COPY "${CMAKE_SOURCE_DIR}/assets/web" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
+file(COPY "${CMAKE_SOURCE_DIR}/assets/web/" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/netlify.toml" DESTINATION "${CMAKE_BINARY_DIR}/bin/")
 
 target_link_options(notorious_beeg_EMSDK PRIVATE
