--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: build/emsdk/bin # The folder the action should deploy.
-          single-commit: true # Start branch with no history
+          # single-commit: true # Start branch with no history
