better implement r/w maps, set fixed width for all enums, update readme with web build links
fixed width for enums were to (potentially) have compatibilty with states across 32 / 64 bit systems

TODO: benchmark this commit!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,7 @@ list(APPEND gcc_flags
     -Wuninitialized
 
     -Wno-unused-parameter
-    -Wno-unknown-attributes
+    -Wno-attributes
 
     -fimplicit-constexpr
     -Wmissing-requires
