commit auto-generated switch / computed-goto executers. (#87)
* commit auto-generated switch / computed-goto executers.

--- a/.github/workflows/build_pc.yml
+++ b/.github/workflows/build_pc.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        preset: [imgui, imgui-dev, sdl2, sdl2-dev]
+        preset: [imgui, imgui-dev, sdl2, sdl2-dev, sdl2-table, sdl2-switch, sdl2-goto]
     runs-on: ${{ matrix.os }}
 
     steps:
