--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -10,8 +10,9 @@ set(INTERPRETER_TABLE 0)
 set(INTERPRETER_SWITCH 1)
 set(INTERPRETER_GOTO 2)
 
+# if an interpreter backend hasn't been set, default to INTERPRETER_SWITCH
 if (NOT DEFINED INTERPRETER)
-    set(INTERPRETER ${INTERPRETER_TABLE})
+    set(INTERPRETER ${INTERPRETER_SWITCH})
 endif()
 
 if (SINGLE_FILE)
