fix workflow for benchmark builds

--- a/.github/workflows/build_pc.yml
+++ b/.github/workflows/build_pc.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04]
-        preset: [imgui, imgui-dev, sdl2, sdl2-dev, bechmark, core-table, core-switch, core-goto]
+        preset: [imgui, imgui-dev, sdl2, sdl2-dev, benchmark-table, benchmark-switch, benchmark-goto]
     runs-on: ${{ matrix.os }}
 
     steps:
