--- a/.github/workflows/deploy_netlify.yml
+++ b/.github/workflows/deploy_netlify.yml
@@ -13,6 +13,8 @@ jobs:
 
       - name: Setup emsdk
         uses: mymindstorm/setup-emsdk@v11
+        with:
+          version: '3.1.20'
 
       - name: Cmake Build
         run: |
