--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Setup emsdk
         uses: mymindstorm/setup-emsdk@v11
+        with:
+          version: '3.1.20'
 
       - name: Cmake Build
         run: |
